--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,13 +1,14 @@
+---
 deployment:
   tasks:
     # === Backend Deployment ===
     - echo "Installing backend dependencies..."
     - cd $DEPLOYPATH/backend && /usr/local/bin/npm install
     - echo "Restarting Node.js app..."
-    - touch $DEPLOYPATH/backend/tmp/restart.txt
+    - /usr/local/cpanel/bin/rebuild_passenger_restart_files
 
     # === Frontend Deployment ===
     - echo "Building React frontend..."
     - cd $DEPLOYPATH/frontend && /usr/local/bin/npm install && /usr/local/bin/npm run build
     - echo "Deploying frontend build to public_html..."
-    - /bin/rsync -a $DEPLOYPATH/frontend/build/ $DEPLOYPATH/../public_html/
+    - /bin/cp -r $DEPLOYPATH/frontend/build/* $DEPLOYPATH/../public_html/
